--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "BeTheChefProject",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
+    "start": "node server.js",
     "client": "npm start --prefix client",
-    "server": "nodemon index.js",
+    "server": "nodemon server.js",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "cd client &&  npm install && npm run build"
   },
