--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "client": "npm start --prefix client",
     "server": "nodemon server.js",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "build": "node scripts/build.js",
     "heroku-postbuild": "cd client &&  npm install && npm run build"
   },
   "keywords": [],
